# tinyfsm

./: .gitattributes  CMakeLists.txt  COPYING  ChangeLog  README  README.md  library.json
doc/: 10-Introduction.txt  20-Concepts.txt  20-Installation.md  20-Installation.txt  30-Usage.txt  40-API.txt  40-Usage.md  40-Usage.txt  50-API.md  50-API.txt  60-Development.txt  60-Licence.txt
examples/: CMakeLists.txt
examples/api/: .gitignore  CMakeLists.txt  Makefile  debugging_switch.cpp  moore_machine.cpp  multiple_switch.cpp  resetting_switch.cpp  simple_switch.cpp
examples/elevator/: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  debug.hpp  elevator.cpp  elevator.hpp  elevator_state.dot  fsmlist.hpp  machine_state.dot  main.cpp  motor.cpp  motor.hpp
include/: tinyfsm.hpp
